--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Player</title>
+    <link rel="shortcut icon" href="./src/assets/images/icon/BeamBeats.png" type="image/x-icon">
     <link rel="stylesheet" href="src/styles/styles.css" />
     <script
       src="https://kit.fontawesome.com/861898755b.js"
